XMLExper/m17/m17_18_1_tinyxml2/comparisonS.txt
In file included from tinyxml2.cpp:24:
tinyxml2.h: In instantiation of ‘NodeType* tinyxml2::XMLDocument::CreateUnlinkedNode(tinyxml2::MemPoolT<PoolElementSize>&) [with NodeType = tinyxml2::XMLComment; int PoolElementSize = 104]’:
tinyxml2.cpp:750:67:   required from here
tinyxml2.h:1996:28: error: cannot convert ‘tinyxml2::XMLDocument*’ to ‘const tinyxml2::XMLComment&’
 1996 |     NodeType* returnNode = new (pool.Alloc()) NodeType( this );
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
tinyxml2.h:1060:17: note:   initializing argument 1 of ‘tinyxml2::XMLComment::XMLComment(const tinyxml2::XMLComment&)’
 1060 |     XMLComment( const XMLComment& ); // not supported
      |                 ^~~~~~~~~~~~~~~~~
diff: tinyxml2.S: No such file or directory
